# vergil-sdk

./: README.md  pyproject.toml
examples/: tool_smoke_test.py
tests/: test_oauth.py
vergil_sdk/: __init__.py  __main__.py  _ws.py  client.py  exceptions.py  models.py  oauth.py
